parser/parser.output
Terminals unused in grammar

    IDENTIFIER_VALUE
    ENDL
    OF
    ASSIGN_CONSTRUCT
    ASSIGN_MULT
    ASSIGN_ORD_DIV
    ASSIGN_INT_DIV
    ASSIGN_ADD
    ASSIGN_SUB
    ASSIGN_LSHIFT
    ASSIGN_RSHIFT
    ASSIGN_CONCAT


Grammar

    0 $accept: root $end

    1 root: program_items_list

    2 program_items_list: %empty
    3                   | program_items_list_not_empty

    4 program_items_list_not_empty: program_item
    5                             | program_items_list_not_empty program_item

    6 program_item: module
    7             | IMPORTS IDENTIFIER stmt_ends

    8 module: MODULE IDENTIFIER stmt_ends END MODULE
    9       | MODULE IDENTIFIER stmt_ends functions_and_sub_list END MODULE
   10       | access MODULE IDENTIFIER stmt_ends END MODULE
   11       | access MODULE IDENTIFIER stmt_ends functions_and_sub_list END MODULE

   12 functions_and_sub_list: function_or_sub
   13                       | functions_and_sub_list stmt_ends function_or_sub

   14 function_or_sub: function
   15                | sub_bloc

   16 function: FUNCTION IDENTIFIER arguments stmt_ends END FUNCTION
   17         | FUNCTION IDENTIFIER arguments stmt_ends RETURN expr_singleline stmt_ends END FUNCTION
   18         | FUNCTION IDENTIFIER arguments stmt_ends RETURN expr_multiline stmt_ends END FUNCTION
   19         | FUNCTION IDENTIFIER arguments stmt_ends stmt_list END FUNCTION
   20         | FUNCTION IDENTIFIER arguments stmt_ends stmt_list RETURN expr_singleline stmt_ends END FUNCTION
   21         | FUNCTION IDENTIFIER arguments stmt_ends stmt_list RETURN expr_multiline stmt_ends END FUNCTION
   22         | access FUNCTION IDENTIFIER arguments stmt_ends END FUNCTION
   23         | access FUNCTION IDENTIFIER arguments stmt_ends RETURN expr_singleline stmt_ends END FUNCTION
   24         | access FUNCTION IDENTIFIER arguments stmt_ends RETURN expr_multiline stmt_ends END FUNCTION
   25         | access FUNCTION IDENTIFIER arguments stmt_ends stmt_list END FUNCTION
   26         | access FUNCTION IDENTIFIER arguments stmt_ends stmt_list RETURN expr_singleline stmt_ends END FUNCTION
   27         | access FUNCTION IDENTIFIER arguments stmt_ends stmt_list RETURN expr_multiline stmt_ends END FUNCTION

   28 sub_bloc: SUB IDENTIFIER '(' parameterlist_or_empty ')' stmt_ends END SUB
   29         | SUB IDENTIFIER '(' parameterlist_or_empty ')' stmt_ends stmt_list END SUB
   30         | access SUB IDENTIFIER '(' parameterlist_or_empty ')' stmt_ends END SUB
   31         | access SUB IDENTIFIER '(' parameterlist_or_empty ')' stmt_ends stmt_list END SUB

   32 parameterlist_or_empty: %empty
   33                       | parameterlist_with_type
   34                       | END_OF_LINE parameterlist_with_type END_OF_LINE
   35                       | END_OF_LINE parameterlist_with_type
   36                       | parameterlist_with_type END_OF_LINE
   37                       | parameterlist_without_type
   38                       | END_OF_LINE parameterlist_without_type END_OF_LINE
   39                       | parameterlist_without_type END_OF_LINE
   40                       | END_OF_LINE parameterlist_without_type

   41 parameterlist_with_type: parameter_with_type
   42                        | parameterlist_with_type ',' parameter_with_type
   43                        | parameterlist_with_type ',' END_OF_LINE parameter_with_type

   44 parameterlist_without_type: parameter_without_type
   45                           | parameterlist_without_type ',' parameter_without_type
   46                           | parameterlist_without_type ',' END_OF_LINE parameter_without_type

   47 parameter_with_type: IDENTIFIER AS basic_literal
   48                    | IDENTIFIER AS basic_literal '(' ')'

   49 parameter_without_type: IDENTIFIER

   50 stmt_list: stmt
   51          | stmt_list stmt

   52 stmt: multi_line_stmt
   53     | single_line_stmt stmt_ends

   54 single_line_stmt: if_stmt_single_line
   55                 | decl_stmt_single_line
   56                 | expr_singleline

   57 multi_line_stmt: decl_stmt stmt_ends
   58                | while_stmt stmt_ends
   59                | do_loop_stmt
   60                | for_loop_stmt
   61                | for_each_loop_stmt
   62                | select_stmt stmt_ends
   63                | if_stmt_multi_line stmt_ends
   64                | expr_multiline stmt_ends

   65 stmt_ends: END_OF_LINE
   66          | stmt_ends END_OF_LINE

   67 decl_stmt: CONST var_name AS basic_literal '=' END_OF_LINE expr_multiline
   68          | CONST var_name_singleline AS basic_literal '=' END_OF_LINE expr_multiline
   69          | DIM var_name AS basic_literal '=' END_OF_LINE expr_multiline
   70          | DIM var_name_singleline AS basic_literal '=' END_OF_LINE expr_multiline
   71          | DIM var_name '=' END_OF_LINE expr_multiline
   72          | DIM var_name_singleline '=' END_OF_LINE expr_multiline

   73 decl_stmt_single_line: CONST var_name_singleline AS basic_literal '=' expr_singleline
   74                      | DIM var_name_singleline AS basic_literal '=' expr_singleline
   75                      | DIM var_name_singleline AS basic_literal
   76                      | DIM var_name_singleline '=' expr_singleline
   77                      | DIM var_name_singleline
   78                      | DIM var_name_singleline '=' NEW basic_literal '(' ')' '{' expr_list '}'

   79 var_name: IDENTIFIER '(' expr_multiline ')'

   80 var_name_singleline: IDENTIFIER '(' expr_singleline ')'
   81                    | IDENTIFIER

   82 access: PUBLIC
   83       | PROTECTED
   84       | FRIEND
   85       | PRIVATE
   86       | PROTECTED FRIEND
   87       | PRIVATE FRIEND

   88 while_stmt: WHILE expr_multiline stmt_ends stmt_list END WHILE
   89           | WHILE expr_singleline stmt_ends stmt_list END WHILE

   90 do_loop_stmt: DO do_loop_condition stmt_list LOOP
   91             | DO stmt_ends stmt_list LOOP do_loop_condition

   92 do_loop_condition: UNTIL expr_singleline stmt_ends
   93                  | WHILE expr_singleline stmt_ends

   94 for_loop_stmt: FOR IDENTIFIER AS basic_literal '=' basic_literal_value TO basic_literal_value stmt_ends stmt_list NEXT
   95              | FOR IDENTIFIER AS basic_literal '=' basic_literal_value TO basic_literal_value STEP basic_literal_value stmt_ends stmt_list NEXT

   96 for_each_loop_stmt: FOR EACH IDENTIFIER AS basic_literal IN IDENTIFIER stmt_ends stmt_list NEXT

   97 if_stmt_multi_line: IF expr_multiline THEN stmt_ends stmt_list END IF
   98                   | IF expr_singleline THEN stmt_ends stmt_list END IF
   99                   | IF expr_multiline THEN stmt_ends stmt_list ELSE stmt_list END IF
  100                   | IF expr_singleline THEN stmt_ends stmt_list ELSE stmt_list END IF
  101                   | IF expr_multiline THEN stmt_ends stmt_list elseif_list END IF
  102                   | IF expr_singleline THEN stmt_ends stmt_list elseif_list END IF
  103                   | IF expr_multiline THEN stmt_ends stmt_list elseif_list ELSE stmt_list END IF
  104                   | IF expr_singleline THEN stmt_ends stmt_list elseif_list ELSE stmt_list END IF

  105 elseif_list: ELSEIF expr_multiline THEN stmt_list
  106            | ELSEIF expr_singleline THEN stmt_list
  107            | elseif_list ELSEIF expr_multiline THEN stmt_list
  108            | elseif_list ELSEIF expr_singleline THEN stmt_list

  109 if_stmt_single_line: IF expr_singleline THEN single_line_stmt
  110                    | IF expr_singleline THEN single_line_stmt ELSE single_line_stmt

  111 select_stmt: SELECT CASE expr_singleline stmt_ends case_list END SELECT
  112            | SELECT CASE expr_multiline stmt_ends case_list END SELECT

  113 case_list: case_stmt
  114          | case_list case_stmt

  115 case_stmt: CASE expr_multiline stmt_ends stmt_list
  116          | CASE expr_singleline stmt_ends stmt_list
  117          | CASE IS expr_multiline stmt_ends stmt_list
  118          | CASE IS expr_singleline stmt_ends stmt_list
  119          | CASE expr_multiline TO expr_multiline stmt_ends stmt_list
  120          | CASE expr_multiline TO expr_singleline stmt_ends stmt_list
  121          | CASE expr_singleline TO expr_multiline stmt_ends stmt_list
  122          | CASE expr_singleline TO expr_singleline stmt_ends stmt_list
  123          | CASE ELSE stmt_ends stmt_list

  124 expr_singleline: basic_literal_value
  125                | '-' expr_singleline
  126                | '+' expr_singleline
  127                | expr_singleline '+' expr_singleline
  128                | expr_singleline '-' expr_singleline
  129                | expr_singleline '*' expr_singleline
  130                | expr_singleline '/' expr_singleline
  131                | expr_singleline INT_DIV expr_singleline
  132                | expr_singleline '=' expr_singleline
  133                | expr_singleline '<' expr_singleline
  134                | expr_singleline '>' expr_singleline
  135                | expr_singleline '^' expr_singleline
  136                | expr_singleline NOT_EQUAL expr_singleline
  137                | expr_singleline LESS_OR_EQUAL expr_singleline
  138                | expr_singleline MORE_OR_EQUAL expr_singleline
  139                | expr_singleline '&' expr_singleline
  140                | '(' expr_singleline ')'
  141                | IDENTIFIER
  142                | IDENTIFIER arguments_singleline

  143 expr_multiline: expr_singleline '+' END_OF_LINE expr_singleline
  144               | expr_singleline '-' END_OF_LINE expr_singleline
  145               | expr_singleline '*' END_OF_LINE expr_singleline
  146               | expr_singleline '/' END_OF_LINE expr_singleline
  147               | expr_singleline INT_DIV END_OF_LINE expr_singleline
  148               | expr_singleline '=' END_OF_LINE expr_singleline
  149               | expr_singleline '<' END_OF_LINE expr_singleline
  150               | expr_singleline '>' END_OF_LINE expr_singleline
  151               | expr_singleline '^' END_OF_LINE expr_singleline
  152               | expr_singleline NOT_EQUAL END_OF_LINE expr_singleline
  153               | expr_singleline LESS_OR_EQUAL END_OF_LINE expr_singleline
  154               | expr_singleline MORE_OR_EQUAL END_OF_LINE expr_singleline
  155               | expr_singleline '&' END_OF_LINE expr_singleline
  156               | '(' END_OF_LINE expr_singleline ')'
  157               | '(' END_OF_LINE expr_singleline END_OF_LINE ')'
  158               | '(' expr_singleline END_OF_LINE ')'
  159               | IDENTIFIER arguments_multiline

  160 basic_literal: INT
  161              | STRING
  162              | BOOLEAN
  163              | DOUBLE

  164 basic_literal_value: INT_VALUE
  165                    | STRING_VALUE
  166                    | BOOLEAN_VALUE
  167                    | DOUBLE_VALUE

  168 arguments_multiline: '(' END_OF_LINE expr_list ')'
  169                    | '(' END_OF_LINE expr_list END_OF_LINE ')'
  170                    | '(' expr_list END_OF_LINE ')'

  171 arguments_singleline: '(' expr_list ')'
  172                     | '(' ')'

  173 arguments: arguments_multiline
  174          | arguments_singleline

  175 expr_list: expr_singleline
  176          | expr_list ',' expr_singleline


Terminals, with rules where they appear

    $end (0) 0
    '&' (38) 139 155
    '(' (40) 28 29 30 31 48 78 79 80 140 156 157 158 168 169 170 171 172
    ')' (41) 28 29 30 31 48 78 79 80 140 156 157 158 168 169 170 171 172
    '*' (42) 129 145
    '+' (43) 126 127 143
    ',' (44) 42 43 45 46 176
    '-' (45) 125 128 144
    '/' (47) 130 146
    '<' (60) 133 149
    '=' (61) 67 68 69 70 71 72 73 74 76 78 94 95 132 148
    '>' (62) 134 150
    '^' (94) 135 151
    '{' (123) 78
    '}' (125) 78
    error (256)
    INT_VALUE <int_val> (258) 164
    DOUBLE_VALUE <double_val> (259) 167
    STRING_VALUE <str_val> (260) 165
    BOOLEAN_VALUE <bool_val> (261) 166
    IDENTIFIER_VALUE <id_name> (262)
    INT (263) 160
    DOUBLE (264) 163
    STRING (265) 161
    BOOLEAN (266) 162
    IDENTIFIER (267) 7 8 9 10 11 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 47 48 49 79 80 81 94 95 96 141 142 159
    ENDL (268)
    SUB (269) 28 29 30 31
    END (270) 8 9 10 11 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 88 89 97 98 99 100 101 102 103 104 111 112
    CONST (271) 67 68 73
    DIM (272) 69 70 71 72 74 75 76 77 78
    AS (273) 47 48 67 68 69 70 73 74 75 94 95 96
    WHILE (274) 88 89 93
    IF (275) 97 98 99 100 101 102 103 104 109 110
    NEW (276) 78
    ELSEIF (277) 105 106 107 108
    SELECT (278) 111 112
    CASE (279) 111 112 115 116 117 118 119 120 121 122 123
    IS (280) 117 118
    TO (281) 94 95 119 120 121 122
    IMPORTS (282) 7
    MODULE (283) 8 9 10 11
    FUNCTION (284) 16 17 18 19 20 21 22 23 24 25 26 27
    RETURN (285) 17 18 20 21 23 24 26 27
    DO (286) 90 91
    LOOP (287) 90 91
    UNTIL (288) 92
    FOR (289) 94 95 96
    NEXT (290) 94 95 96
    STEP (291) 95
    OF (292)
    IN (293) 96
    EACH (294) 96
    END_OF_LINE (295) 34 35 36 38 39 40 43 46 65 66 67 68 69 70 71 72 143 144 145 146 147 148 149 150 151 152 153 154 155 156 157 158 168 169 170
    ASSIGN_CONSTRUCT (296)
    ASSIGN_MULT (297)
    ASSIGN_ORD_DIV (298)
    ASSIGN_INT_DIV (299)
    ASSIGN_ADD (300)
    ASSIGN_SUB (301)
    ASSIGN_LSHIFT (302)
    ASSIGN_RSHIFT (303)
    ASSIGN_CONCAT (304)
    PRIVATE (305) 85 87
    PROTECTED (306) 83 86
    PUBLIC (307) 82
    FRIEND (308) 84 86 87
    INT_DIV (309) 131 147
    UNARY_MINUS (310)
    UNARY_PLUS (311)
    NOT_EQUAL (312) 136 152
    LESS_OR_EQUAL (313) 137 153
    MORE_OR_EQUAL (314) 138 154
    THEN (315) 97 98 99 100 101 102 103 104 105 106 107 108 109 110
    ELSE (316) 99 100 103 104 110 123


Nonterminals, with rules where they appear

    $accept (76)
        on left: 0
    root (77)
        on left: 1
        on right: 0
    program_items_list (78)
        on left: 2 3
        on right: 1
    program_items_list_not_empty (79)
        on left: 4 5
        on right: 3 5
    program_item (80)
        on left: 6 7
        on right: 4 5
    module (81)
        on left: 8 9 10 11
        on right: 6
    functions_and_sub_list (82)
        on left: 12 13
        on right: 9 11 13
    function_or_sub (83)
        on left: 14 15
        on right: 12 13
    function (84)
        on left: 16 17 18 19 20 21 22 23 24 25 26 27
        on right: 14
    sub_bloc (85)
        on left: 28 29 30 31
        on right: 15
    parameterlist_or_empty (86)
        on left: 32 33 34 35 36 37 38 39 40
        on right: 28 29 30 31
    parameterlist_with_type (87)
        on left: 41 42 43
        on right: 33 34 35 36 42 43
    parameterlist_without_type (88)
        on left: 44 45 46
        on right: 37 38 39 40 45 46
    parameter_with_type (89)
        on left: 47 48
        on right: 41 42 43
    parameter_without_type (90)
        on left: 49
        on right: 44 45 46
    stmt_list (91)
        on left: 50 51
        on right: 19 20 21 25 26 27 29 31 51 88 89 90 91 94 95 96 97 98 99 100 101 102 103 104 105 106 107 108 115 116 117 118 119 120 121 122 123
    stmt (92)
        on left: 52 53
        on right: 50 51
    single_line_stmt (93)
        on left: 54 55 56
        on right: 53 109 110
    multi_line_stmt (94)
        on left: 57 58 59 60 61 62 63 64
        on right: 52
    stmt_ends (95)
        on left: 65 66
        on right: 7 8 9 10 11 13 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 53 57 58 62 63 64 66 88 89 91 92 93 94 95 96 97 98 99 100 101 102 103 104 111 112 115 116 117 118 119 120 121 122 123
    decl_stmt (96)
        on left: 67 68 69 70 71 72
        on right: 57
    decl_stmt_single_line (97)
        on left: 73 74 75 76 77 78
        on right: 55
    var_name (98)
        on left: 79
        on right: 67 69 71
    var_name_singleline (99)
        on left: 80 81
        on right: 68 70 72 73 74 75 76 77 78
    access (100)
        on left: 82 83 84 85 86 87
        on right: 10 11 22 23 24 25 26 27 30 31
    while_stmt (101)
        on left: 88 89
        on right: 58
    do_loop_stmt (102)
        on left: 90 91
        on right: 59
    do_loop_condition (103)
        on left: 92 93
        on right: 90 91
    for_loop_stmt (104)
        on left: 94 95
        on right: 60
    for_each_loop_stmt (105)
        on left: 96
        on right: 61
    if_stmt_multi_line (106)
        on left: 97 98 99 100 101 102 103 104
        on right: 63
    elseif_list (107)
        on left: 105 106 107 108
        on right: 101 102 103 104 107 108
    if_stmt_single_line (108)
        on left: 109 110
        on right: 54
    select_stmt (109)
        on left: 111 112
        on right: 62
    case_list (110)
        on left: 113 114
        on right: 111 112 114
    case_stmt (111)
        on left: 115 116 117 118 119 120 121 122 123
        on right: 113 114
    expr_singleline (112)
        on left: 124 125 126 127 128 129 130 131 132 133 134 135 136 137 138 139 140 141 142
        on right: 17 20 23 26 56 73 74 76 80 89 92 93 98 100 102 104 106 108 109 110 111 116 118 120 121 122 125 126 127 128 129 130 131 132 133 134 135 136 137 138 139 140 143 144 145 146 147 148 149 150 151 152 153 154 155 156 157 158 175 176
    expr_multiline (113)
        on left: 143 144 145 146 147 148 149 150 151 152 153 154 155 156 157 158 159
        on right: 18 21 24 27 64 67 68 69 70 71 72 79 88 97 99 101 103 105 107 112 115 117 119 120 121
    basic_literal (114)
        on left: 160 161 162 163
        on right: 47 48 67 68 69 70 73 74 75 78 94 95 96
    basic_literal_value (115)
        on left: 164 165 166 167
        on right: 94 95 124
    arguments_multiline (116)
        on left: 168 169 170
        on right: 159 173
    arguments_singleline (117)
        on left: 171 172
        on right: 142 174
    arguments (118)
        on left: 173 174
        on right: 16 17 18 19 20 21 22 23 24 25 26 27
    expr_list (119)
        on left: 175 176
        on right: 78 168 169 170 171 176


State 0

    0 $accept: . root $end

    IMPORTS    shift, and go to state 1
    MODULE     shift, and go to state 2
    PRIVATE    shift, and go to state 3
    PROTECTED  shift, and go to state 4
    PUBLIC     shift, and go to state 5
    FRIEND     shift, and go to state 6

    $default  reduce using rule 2 (program_items_list)

    root                          go to state 7
    program_items_list            go to state 8
    program_items_list_not_empty  go to state 9
    program_item                  go to state 10
    module                        go to state 11
    access                        go to state 12


State 1

    7 program_item: IMPORTS . IDENTIFIER stmt_ends

    IDENTIFIER  shift, and go to state 13


State 2

    8 module: MODULE . IDENTIFIER stmt_ends END MODULE
    9       | MODULE . IDENTIFIER stmt_ends functions_and_sub_list END MODULE

    IDENTIFIER  shift, and go to state 14


State 3

   85 access: PRIVATE .
   87       | PRIVATE . FRIEND

    FRIEND  shift, and go to state 15

    $default  reduce using rule 85 (access)


State 4

   83 access: PROTECTED .
   86       | PROTECTED . FRIEND

    FRIEND  shift, and go to state 16

    $default  reduce using rule 83 (access)


State 5

   82 access: PUBLIC .

    $default  reduce using rule 82 (access)


State 6

   84 access: FRIEND .

    $default  reduce using rule 84 (access)


State 7

    0 $accept: root . $end

    $end  shift, and go to state 17


State 8

    1 root: program_items_list .

    $default  reduce using rule 1 (root)


State 9

    3 program_items_list: program_items_list_not_empty .
    5 program_items_list_not_empty: program_items_list_not_empty . program_item

    IMPORTS    shift, and go to state 1
    MODULE     shift, and go to state 2
    PRIVATE    shift, and go to state 3
    PROTECTED  shift, and go to state 4
    PUBLIC     shift, and go to state 5
    FRIEND     shift, and go to state 6

    $default  reduce using rule 3 (program_items_list)

    program_item  go to state 18
    module        go to state 11
    access        go to state 12


State 10

    4 program_items_list_not_empty: program_item .

    $default  reduce using rule 4 (program_items_list_not_empty)


State 11

    6 program_item: module .

    $default  reduce using rule 6 (program_item)


State 12

   10 module: access . MODULE IDENTIFIER stmt_ends END MODULE
   11       | access . MODULE IDENTIFIER stmt_ends functions_and_sub_list END MODULE

    MODULE  shift, and go to state 19


State 13

    7 program_item: IMPORTS IDENTIFIER . stmt_ends

    END_OF_LINE  shift, and go to state 20

    stmt_ends  go to state 21


State 14

    8 module: MODULE IDENTIFIER . stmt_ends END MODULE
    9       | MODULE IDENTIFIER . stmt_ends functions_and_sub_list END MODULE

    END_OF_LINE  shift, and go to state 20

    stmt_ends  go to state 22


State 15

   87 access: PRIVATE FRIEND .

    $default  reduce using rule 87 (access)


State 16

   86 access: PROTECTED FRIEND .

    $default  reduce using rule 86 (access)


State 17

    0 $accept: root $end .

    $default  accept


State 18

    5 program_items_list_not_empty: program_items_list_not_empty program_item .

    $default  reduce using rule 5 (program_items_list_not_empty)


State 19

   10 module: access MODULE . IDENTIFIER stmt_ends END MODULE
   11       | access MODULE . IDENTIFIER stmt_ends functions_and_sub_list END MODULE

    IDENTIFIER  shift, and go to state 23


State 20

   65 stmt_ends: END_OF_LINE .

    $default  reduce using rule 65 (stmt_ends)


State 21

    7 program_item: IMPORTS IDENTIFIER stmt_ends .
   66 stmt_ends: stmt_ends . END_OF_LINE

    END_OF_LINE  shift, and go to state 24

    $default  reduce using rule 7 (program_item)


State 22

    8 module: MODULE IDENTIFIER stmt_ends . END MODULE
    9       | MODULE IDENTIFIER stmt_ends . functions_and_sub_list END MODULE
   66 stmt_ends: stmt_ends . END_OF_LINE

    SUB          shift, and go to state 25
    END          shift, and go to state 26
    FUNCTION     shift, and go to state 27
    END_OF_LINE  shift, and go to state 24
    PRIVATE      shift, and go to state 3
    PROTECTED    shift, and go to state 4
    PUBLIC       shift, and go to state 5
    FRIEND       shift, and go to state 6

    functions_and_sub_list  go to state 28
    function_or_sub         go to state 29
    function                go to state 30
    sub_bloc                go to state 31
    access                  go to state 32


State 23

   10 module: access MODULE IDENTIFIER . stmt_ends END MODULE
   11       | access MODULE IDENTIFIER . stmt_ends functions_and_sub_list END MODULE

    END_OF_LINE  shift, and go to state 20

    stmt_ends  go to state 33


State 24

   66 stmt_ends: stmt_ends END_OF_LINE .

    $default  reduce using rule 66 (stmt_ends)


State 25

   28 sub_bloc: SUB . IDENTIFIER '(' parameterlist_or_empty ')' stmt_ends END SUB
   29         | SUB . IDENTIFIER '(' parameterlist_or_empty ')' stmt_ends stmt_list END SUB

    IDENTIFIER  shift, and go to state 34


State 26

    8 module: MODULE IDENTIFIER stmt_ends END . MODULE

    MODULE  shift, and go to state 35


State 27

   16 function: FUNCTION . IDENTIFIER arguments stmt_ends END FUNCTION
   17         | FUNCTION . IDENTIFIER arguments stmt_ends RETURN expr_singleline stmt_ends END FUNCTION
   18         | FUNCTION . IDENTIFIER arguments stmt_ends RETURN expr_multiline stmt_ends END FUNCTION
   19         | FUNCTION . IDENTIFIER arguments stmt_ends stmt_list END FUNCTION
   20         | FUNCTION . IDENTIFIER arguments stmt_ends stmt_list RETURN expr_singleline stmt_ends END FUNCTION
   21         | FUNCTION . IDENTIFIER arguments stmt_ends stmt_list RETURN expr_multiline stmt_ends END FUNCTION

    IDENTIFIER  shift, and go to state 36


State 28

    9 module: MODULE IDENTIFIER stmt_ends functions_and_sub_list . END MODULE
   13 functions_and_sub_list: functions_and_sub_list . stmt_ends function_or_sub

    END          shift, and go to state 37
    END_OF_LINE  shift, and go to state 20

    stmt_ends  go to state 38


State 29

   12 functions_and_sub_list: function_or_sub .

    $default  reduce using rule 12 (functions_and_sub_list)


State 30

   14 function_or_sub: function .

    $default  reduce using rule 14 (function_or_sub)


State 31

   15 function_or_sub: sub_bloc .

    $default  reduce using rule 15 (function_or_sub)


State 32

   22 function: access . FUNCTION IDENTIFIER arguments stmt_ends END FUNCTION
   23         | access . FUNCTION IDENTIFIER arguments stmt_ends RETURN expr_singleline stmt_ends END FUNCTION
   24         | access . FUNCTION IDENTIFIER arguments stmt_ends RETURN expr_multiline stmt_ends END FUNCTION
   25         | access . FUNCTION IDENTIFIER arguments stmt_ends stmt_list END FUNCTION
   26         | access . FUNCTION IDENTIFIER arguments stmt_ends stmt_list RETURN expr_singleline stmt_ends END FUNCTION
   27         | access . FUNCTION IDENTIFIER arguments stmt_ends stmt_list RETURN expr_multiline stmt_ends END FUNCTION
   30 sub_bloc: access . SUB IDENTIFIER '(' parameterlist_or_empty ')' stmt_ends END SUB
   31         | access . SUB IDENTIFIER '(' parameterlist_or_empty ')' stmt_ends stmt_list END SUB

    SUB       shift, and go to state 39
    FUNCTION  shift, and go to state 40


State 33

   10 module: access MODULE IDENTIFIER stmt_ends . END MODULE
   11       | access MODULE IDENTIFIER stmt_ends . functions_and_sub_list END MODULE
   66 stmt_ends: stmt_ends . END_OF_LINE

    SUB          shift, and go to state 25
    END          shift, and go to state 41
    FUNCTION     shift, and go to state 27
    END_OF_LINE  shift, and go to state 24
    PRIVATE      shift, and go to state 3
    PROTECTED    shift, and go to state 4
    PUBLIC       shift, and go to state 5
    FRIEND       shift, and go to state 6

    functions_and_sub_list  go to state 42
    function_or_sub         go to state 29
    function                go to state 30
    sub_bloc                go to state 31
    access                  go to state 32


State 34

   28 sub_bloc: SUB IDENTIFIER . '(' parameterlist_or_empty ')' stmt_ends END SUB
   29         | SUB IDENTIFIER . '(' parameterlist_or_empty ')' stmt_ends stmt_list END SUB

    '('  shift, and go to state 43


State 35

    8 module: MODULE IDENTIFIER stmt_ends END MODULE .

    $default  reduce using rule 8 (module)


State 36

   16 function: FUNCTION IDENTIFIER . arguments stmt_ends END FUNCTION
   17         | FUNCTION IDENTIFIER . arguments stmt_ends RETURN expr_singleline stmt_ends END FUNCTION
   18         | FUNCTION IDENTIFIER . arguments stmt_ends RETURN expr_multiline stmt_ends END FUNCTION
   19         | FUNCTION IDENTIFIER . arguments stmt_ends stmt_list END FUNCTION
   20         | FUNCTION IDENTIFIER . arguments stmt_ends stmt_list RETURN expr_singleline stmt_ends END FUNCTION
   21         | FUNCTION IDENTIFIER . arguments stmt_ends stmt_list RETURN expr_multiline stmt_ends END FUNCTION

    '('  shift, and go to state 44

    arguments_multiline   go to state 45
    arguments_singleline  go to state 46
    arguments             go to state 47


State 37

    9 module: MODULE IDENTIFIER stmt_ends functions_and_sub_list END . MODULE

    MODULE  shift, and go to state 48


State 38

   13 functions_and_sub_list: functions_and_sub_list stmt_ends . function_or_sub
   66 stmt_ends: stmt_ends . END_OF_LINE

    SUB          shift, and go to state 25
    FUNCTION     shift, and go to state 27
    END_OF_LINE  shift, and go to state 24
    PRIVATE      shift, and go to state 3
    PROTECTED    shift, and go to state 4
    PUBLIC       shift, and go to state 5
    FRIEND       shift, and go to state 6

    function_or_sub  go to state 49
    function         go to state 30
    sub_bloc         go to state 31
    access           go to state 32


State 39

   30 sub_bloc: access SUB . IDENTIFIER '(' parameterlist_or_empty ')' stmt_ends END SUB
   31         | access SUB . IDENTIFIER '(' parameterlist_or_empty ')' stmt_ends stmt_list END SUB

    IDENTIFIER  shift, and go to state 50


State 40

   22 function: access FUNCTION . IDENTIFIER arguments stmt_ends END FUNCTION
   23         | access FUNCTION . IDENTIFIER arguments stmt_ends RETURN expr_singleline stmt_ends END FUNCTION
   24         | access FUNCTION . IDENTIFIER arguments stmt_ends RETURN expr_multiline stmt_ends END FUNCTION
   25         | access FUNCTION . IDENTIFIER arguments stmt_ends stmt_list END FUNCTION
   26         | access FUNCTION . IDENTIFIER arguments stmt_ends stmt_list RETURN expr_singleline stmt_ends END FUNCTION
   27         | access FUNCTION . IDENTIFIER arguments stmt_ends stmt_list RETURN expr_multiline stmt_ends END FUNCTION

    IDENTIFIER  shift, and go to state 51


State 41

   10 module: access MODULE IDENTIFIER stmt_ends END . MODULE

    MODULE  shift, and go to state 52


State 42

   11 module: access MODULE IDENTIFIER stmt_ends functions_and_sub_list . END MODULE
   13 functions_and_sub_list: functions_and_sub_list . stmt_ends function_or_sub

    END          shift, and go to state 53
    END_OF_LINE  shift, and go to state 20

    stmt_ends  go to state 38


State 43

   28 sub_bloc: SUB IDENTIFIER '(' . parameterlist_or_empty ')' stmt_ends END SUB
   29         | SUB IDENTIFIER '(' . parameterlist_or_empty ')' stmt_ends stmt_list END SUB

    IDENTIFIER   shift, and go to state 54
    END_OF_LINE  shift, and go to state 55

    $default  reduce using rule 32 (parameterlist_or_empty)

    parameterlist_or_empty      go to state 56
    parameterlist_with_type     go to state 57
    parameterlist_without_type  go to state 58
    parameter_with_type         go to state 59
    parameter_without_type      go to state 60


State 44

  168 arguments_multiline: '(' . END_OF_LINE expr_list ')'
  169                    | '(' . END_OF_LINE expr_list END_OF_LINE ')'
  170                    | '(' . expr_list END_OF_LINE ')'
  171 arguments_singleline: '(' . expr_list ')'
  172                     | '(' . ')'

    INT_VALUE      shift, and go to state 61
    DOUBLE_VALUE   shift, and go to state 62
    STRING_VALUE   shift, and go to state 63
    BOOLEAN_VALUE  shift, and go to state 64
    IDENTIFIER     shift, and go to state 65
    END_OF_LINE    shift, and go to state 66
    '+'            shift, and go to state 67
    '-'            shift, and go to state 68
    '('            shift, and go to state 69
    ')'            shift, and go to state 70

    expr_singleline      go to state 71
    basic_literal_value  go to state 72
    expr_list            go to state 73


State 45

  173 arguments: arguments_multiline .

    $default  reduce using rule 173 (arguments)


State 46

  174 arguments: arguments_singleline .

    $default  reduce using rule 174 (arguments)


State 47

   16 function: FUNCTION IDENTIFIER arguments . stmt_ends END FUNCTION
   17         | FUNCTION IDENTIFIER arguments . stmt_ends RETURN expr_singleline stmt_ends END FUNCTION
   18         | FUNCTION IDENTIFIER arguments . stmt_ends RETURN expr_multiline stmt_ends END FUNCTION
   19         | FUNCTION IDENTIFIER arguments . stmt_ends stmt_list END FUNCTION
   20         | FUNCTION IDENTIFIER arguments . stmt_ends stmt_list RETURN expr_singleline stmt_ends END FUNCTION
   21         | FUNCTION IDENTIFIER arguments . stmt_ends stmt_list RETURN expr_multiline stmt_ends END FUNCTION

    END_OF_LINE  shift, and go to state 20

    stmt_ends  go to state 74


State 48

    9 module: MODULE IDENTIFIER stmt_ends functions_and_sub_list END MODULE .

    $default  reduce using rule 9 (module)


State 49

   13 functions_and_sub_list: functions_and_sub_list stmt_ends function_or_sub .

    $default  reduce using rule 13 (functions_and_sub_list)


State 50

   30 sub_bloc: access SUB IDENTIFIER . '(' parameterlist_or_empty ')' stmt_ends END SUB
   31         | access SUB IDENTIFIER . '(' parameterlist_or_empty ')' stmt_ends stmt_list END SUB

    '('  shift, and go to state 75


State 51
